--- a/Railway.toml
+++ b/Railway.toml
@@ -1,11 +1,8 @@
 [build]
-builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt"
+dockerfile = "Dockerfile"
 
 [deploy]
 startCommand = "python app.py"
-healthCheckPath = "/"
-healthCheckTimeout = 30
 
 [[services]]
 port = 8000
